--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -11,10 +11,11 @@ body {
 }
 
 .todo {
-    margin: 14px;
+    margin: 10px;
     background-color: #fff;
     padding-top: 8px;
     padding-bottom: 30px;
+    min-width:500px;
 
 }
 
@@ -35,8 +36,9 @@ body {
     margin-top: 10px;
     margin-left: 25px;
     box-shadow:  1px 0px 3px 2px #ccc;
-    margin-right:27px;
+    margin-right:23px;
     border-top: 2px solid #000;
+    
     
 }
 
